--- a/angular-session2.html
+++ b/angular-session2.html
@@ -9,11 +9,11 @@
 <body>
 
 	<div>
-		First Name: <input type="text" ng-mode="firstName">
+		First Name: <input type="text" ng-model="firstName">
 	</div>	
 
 	<div>
-		Last Name: <input type="text" ng-mode="lastName">
+		Last Name: <input type="text" ng-model="lastName">
 	</div>
 
 	<hr />
