--- a/angular-session2.html
+++ b/angular-session2.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="myApp">
 <head>
 	
 	<title></title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+	<script type="text/javascript" src="controller.js"></script>
 </head>
 
-<body>
+<body ng-controller="myController">
 
-	<div>
-		First Name: <input type="text" ng-model="firstName">
-	</div>	
-
-	<div>
-		Last Name: <input type="text" ng-model="lastName">
-	</div>
-
-	<hr />
-		Hello, {{firstName}} {{lastName}}
+	<ul>
+		<li ng-repeat="person in items">
+			{{person.name}}: {{person.desc}}
+		</li>
+	</ul>
+	
 </body>
 </html>
