--- a/angular-session2.html
+++ b/angular-session2.html
@@ -10,10 +10,16 @@
 <body ng-controller="myController">
 
 	<ul>
-		<li ng-repeat="person in items">
+		<li ng-repeat="person in students">
 			{{person.name}}: {{person.desc}}
 		</li>
 	</ul>
+
+	<form ng-submit="addPerson()">
+		<input type="text" ng-model="newName">
+		<input type="test" ng-model="newDesc">
+		<input type="submit">
+	</form>
 	
 </body>
 </html>
