--- a/angular-session2.html
+++ b/angular-session2.html
@@ -16,8 +16,8 @@
 	</ul>
 
 	<form ng-submit="addPerson()">
-		<input type="text" ng-model="newName">
-		<input type="test" ng-model="newDesc">
+		<input type="text" ng-model="newName" placeholder="Name">
+		<input type="test" ng-model="newDesc" placeholder="Description">
 		<input type="submit">
 	</form>
 	
