--- a/angular-session2.html
+++ b/angular-session2.html
@@ -3,18 +3,25 @@
 <head>
 	
 	<title></title>
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script type="text/javascript" src="controller.js"></script>
 </head>
 
 <body ng-controller="myController">
 
-	<ul>
-		<li ng-repeat="person in students">
-			{{person.name}}: {{person.desc}}
-			<a href="#" ng-click="removeStudent(person)">Remove</a>
-		</li>
-	</ul>
+<div class="container">
+	<div class="row">
+		<ul>
+			<li ng-repeat="person in students">
+				<span class="col-md-6">{{person.name}}: {{person.desc}}</span>
+				<a class="btn btn-danger btn-sm" class="col-md-6" href="#" ng-click="removeStudent(person)">Remove</a>
+			</li>
+		</ul>
+	</div>
+</div>
 
 	<form ng-submit="addPerson()">
 		<input type="text" ng-model="newName" placeholder="Name">
