--- a/angular-session2.html
+++ b/angular-session2.html
@@ -14,26 +14,25 @@
 
 <body ng-controller="myController">
 
-<div id="filter">
-	<input ng-model="filterSearch" type="text">
-</div>
-
 <div class="container">
 	<div class="row">
-		<ul>
-			<li ng-repeat="person in students | filter:filterSearch | orderBy:'name'">
-				<span class="col-md-6">{{person.name}}: {{person.desc}}</span>
-				<a class="btn btn-danger btn-sm" class="col-md-6" href="#" ng-click="removeStudent(person)">Remove</a>
-			</li>
-		</ul>
+
+	Search:<input ng-model="query" type="text">
+	<table>
+		<tr>
+			<th><a href="" ng-click="sortField = 'name';">Name</a></th>
+			<th><a href="" ng-click="sortField = 'desc';">Description</a></th>
+		</tr>
+		<tr ng-repeat="student in students | filter:query| orderBy:sortField">
+			<td>{{student.name}}</td>
+			<td>{{student.desc}}</td>
+		</tr>
+		
 	</div>
+	
+	
 </div>
 
-	<form ng-submit="addPerson()">
-		<input type="text" ng-model="newName" placeholder="Name">
-		<input type="test" ng-model="newDesc" placeholder="Description">
-		<input type="submit">
-	</form>
 	
 </body>
 </html>
