--- a/angular-session2.html
+++ b/angular-session2.html
@@ -4,10 +4,23 @@
 	
 	<title></title>
 
+
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+
+	<style>
+		table{
+			padding: 20px;
+		}
+		input{
+			margin: 10px;
+		}
+		
+	</style>
+
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
+	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script> -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script type="text/javascript" src="controller.js"></script>
 </head>
@@ -20,12 +33,15 @@
 	Search:<input ng-model="query" type="text">
 	<table>
 		<tr>
-			<th><a href="" ng-click="sortField = 'name';">Name</a></th>
-			<th><a href="" ng-click="sortField = 'desc';">Description</a></th>
+			<th><a href="" ng-click="sortField = 'name'; reverse = !reverse">Name</a></th>
+			<th><a href="" ng-click="sortField = 'desc'; reverse = !reverse">Description</a></th>
+			<th><a href="" ng-click="sortField = 'luckyNumber'; reverse = !reverse">Lucky Number</a></th>
 		</tr>
-		<tr ng-repeat="student in students | filter:query| orderBy:sortField">
+		<tr ng-repeat="student in students | filter:query| orderBy:sortField:reverse">
 			<td>{{student.name}}</td>
 			<td>{{student.desc}}</td>
+			<td>{{student.luckyNumber}}</td>
+
 		</tr>
 		
 	</div>
