--- a/angular-session2.html
+++ b/angular-session2.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="styles.css">
 
 	<style>
-		table{
+		td{
 			padding: 20px;
 		}
 		input{
@@ -31,7 +31,7 @@
 	<div class="row">
 
 	Search:<input ng-model="query" type="text">
-	<table>
+	<table border=1>
 		<tr>
 			<th><a href="" ng-click="sortField = 'name'; reverse = !reverse">Name</a></th>
 			<th><a href="" ng-click="sortField = 'desc'; reverse = !reverse">Description</a></th>
